[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "timberborn-api"
version = "0.1.0"
description = "Python client for the Timberborn HTTP API"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dependencies = ["requests", "flask"]

authors = [
    {name = "Joh3BL"}
]

keywords = ["timberborn", "api", "automation", "game"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]